--- a/src/pages/infra-curso/infra-curso.scss
+++ b/src/pages/infra-curso/infra-curso.scss
@@ -1,3 +1,10 @@
 page-infra-curso {
 
 }
+.background.scroll-content{ 
+background: url("/infra-curso/img/image-6.jpg" ) no-repeat; 
+background-size: cover; 
+background-position: center; 
+margin: auto; 
+z-index: 2; 
+}
