--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <ion-menu [content]="NAV">
 <ion-content>
-  <img src="/assets/img/logofacisa2.png" alt="">
+  <img style="margin-top: 40px; margin-bottom: 10px;" src="/assets/img/logofacisa2.png" alt="">
   <ion-list>
       <button color= "light" menuClose ion-item *ngFor= "let page of pages"(click)= "goToPage(page.component)">
         <ion-icon item-left name = "{{ page.icon }}"></ion-icon>
